--- a/TravisImageGallery.API/appsettings.json
+++ b/TravisImageGallery.API/appsettings.json
@@ -11,5 +11,10 @@
         "Default": "Warning"
       }
     }
+  },
+
+  "ConnectionStrings": {
+    "DefaultWindowConnectionn": "Server=localhost\\SQLEXPRESS;Database=TravisImgaeGallery;Trusted_Connection=True",
+    "DefaultMacConnectionn": "Server=localhost\\SQLEXPRESS;Database=TravisImgaeGallery;Trusted_Connection=True"
   }
 }
